--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <h1>{{title}}</h1>
 <h2>Victor m</h2>
+
+
+<ul>
+  <li *ngFor="let usuario of usuarios">
+    {{usuario.id}} - {{usuario.username}}
+  </li>
+</ul>
