44-Crear nuevo Modulo Routing para Lazy Loading

--- a/src/app/compartido/layout/layout.component.html
+++ b/src/app/compartido/layout/layout.component.html
@@ -6,7 +6,7 @@
   </button>
 
   <span style="flex: 1 1 auto;"></span>
-  <label style="font-size: 14px;margin-right: 20px;">{{username}}</label>
+  <label style="font-size: 14px;margin-right: 20px;"><b>{{username}}</b></label>
   <button mat-icon-button (click)="cerrarSesion();">
     <mat-icon>logout</mat-icon>
   </button>
@@ -14,20 +14,26 @@
 
 
 <mat-sidenav-container>
+  <mat-sidenav #sidenav opened mode="side" style="width: 220px;background: #2c3e50;">
+    <mat-nav-list>
+      <mat-list-item routerLink="/layout/dashboard">
+        <mat-icon matListItemIcon style="color: white">dashboard</mat-icon>
+        <div matListItemTitle style="color: white;">Dashboard</div>
+      </mat-list-item>
+
+      <mat-list-item>
+        <mat-icon matListItemIcon style="color: white">category</mat-icon>
+        <div matListItemTitle style="color: white;">Especialidades</div>
+      </mat-list-item>
+    </mat-nav-list>
+  </mat-sidenav>
 
 
-<mat-sidenav #sidenav opened mode="side" style="width: 220px;background: #2c3e50;">
-
-</mat-sidenav>
-
-
-<mat-sidenav-content>
-  <div style="height: 90vh;">
-    <router-outlet></router-outlet>
-  </div>
-</mat-sidenav-content>
+  <mat-sidenav-content>
+    <div style="height: 90vh;">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
 
 
 </mat-sidenav-container>
-
-
