--- a/src/app/compartido/layout/layout.component.html
+++ b/src/app/compartido/layout/layout.component.html
@@ -21,7 +21,7 @@
         <div matListItemTitle style="color: white;">Dashboard</div>
       </mat-list-item>
 
-      <mat-list-item>
+      <mat-list-item routerLink="/layout/especialidades">
         <mat-icon matListItemIcon style="color: white">category</mat-icon>
         <div matListItemTitle style="color: white;">Especialidades</div>
       </mat-list-item>
